@@ -3,7 +3,6 @@ package com.gestionclient.service;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -18,9 +17,8 @@ public class LoginAttemptService {
 
     public boolean isBlocked(String ip) {
         long now = System.currentTimeMillis();
-        List<Long> times = attempts.getOrDefault(ip, Collections.emptyList());
-        long recent = times.stream().filter(t -> now - t < WINDOW_MS).count();
-        return recent >= MAX_ATTEMPTS;
+        List<Long> times = attempts.getOrDefault(ip, List.of());
+        return times.stream().filter(t -> now - t < WINDOW_MS).count() >= MAX_ATTEMPTS;
     }
 
     public void registerFailedAttempt(String ip) {
@@ -28,6 +26,8 @@ public class LoginAttemptService {
         attempts.compute(ip, (k, v) -> {
             List<Long> times = v == null ? new ArrayList<>() : new ArrayList<>(v);
             times.add(now);
+            // Purge des entrées expirées pour éviter la fuite mémoire
+            times.removeIf(t -> now - t >= WINDOW_MS);
             return times;
         });
     }
